--- a/semeval_pilot.ipynb
+++ b/semeval_pilot.ipynb
@@ -6,7 +6,7 @@
         "id": "Ikjqu7QXYzRq"
       },
       "source": [
-        "# Steering Activations"
+        "# Inference on multi-lingual syllogisms"
       ]
     },
     {
