--- a/semeval_pilot.ipynb
+++ b/semeval_pilot.ipynb
@@ -522,7 +522,7 @@
       ],
       "source": [
         "# Log in to Hugging Face\n",
-        "login(token=\"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\")\n",
+        "login(token=\"hf_token\")\n",
         "\n",
         "# Load model and tokenizer\n",
         "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
